# ollama-mcp-bridge

./: .gitignore  README.md  bridge.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: hardening-spec.md  security-redesign-plan.md  security-redesign-spec.md
src/ollama_mcp_bridge/: __init__.py  adapters.py  audit.py  bridge.py  capabilities.py  config.py  errors.py  loop.py  mcp_client.py  ollama_client.py  security.py  sink_policy.py  translator.py  types.py
tests/: conftest.py  helpers.py  run_e2e_report.py  test_adapters.py  test_adversarial.py  test_audit.py  test_capabilities.py  test_config.py  test_f1_upgrade.py  test_integration.py  test_live.py  test_live_mcp.py  test_live_model.py  test_live_multistep.py  test_redteam.py  test_security.py  test_sink_policy.py  test_translator.py  test_types.py
tests/fixtures/: adversarial_mcp_server.py  test_mcp_server.py
tests/results/: .gitignore  adversarial_sink_policy.xml  e2e-report.md  e2e-results.xml
tools/: run_hardening_report.py
